<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  tools:rootContext=".Activities.SignInActivity">
  <LinearLayout
    android:paddingTop="32dp"
    android:paddingStart="18dp"
    android:paddingEnd="18dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:textColor="@color/colorBackgroundLight"
      android:textSize="52sp"
      android:fontFamily="@font/patua"
      android:text="@string/app_name_logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <TextView
      android:text="@string/sign_in_title"
      android:textSize="40sp"
      android:textColor="@android:color/white"
      android:fontFamily="@font/roboto_light"
      android:layout_marginTop="48sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <TextView
      android:textSize="16sp"
      android:textColor="@color/colorBackgroundDark"
      android:fontFamily="sans-serif-light"
      android:text="@string/sign_in_subtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
      android:layout_marginTop="64dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <android.support.design.widget.TextInputEditText
        android:id="@+id/signInEmailEditText"
        android:hint="@string/email_address"
        android:textSize="16sp"
        android:textColorHint="@color/colorBackgroundDark"
        android:backgroundTint="@color/colorBackgroundLight"
        android:fontFamily="@font/roboto_light"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_marginTop="24dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <android.support.design.widget.TextInputEditText
        android:id="@+id/signInPasswordEditText"
        android:hint="@string/password"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_light"
        android:textColorHint="@color/colorBackgroundDark"
        android:backgroundTint="@color/colorBackgroundLight"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
      android:id="@+id/signInForgotPasswordTextView"
      android:layout_marginTop="8dp"
      android:layout_gravity="end"
      android:fontFamily="sans-serif-light"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      android:text="@string/forgot_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <Button
      android:id="@+id/signInButton"
      android:text="Sign In"
      android:textAllCaps="false"
      android:textSize="24sp"
      android:fontFamily="@font/roboto_light"
      android:textColor="@android:color/white"
      android:theme="@style/ButtonStyleAccent"
      android:layout_marginTop="32dp"
      android:padding="16dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

    <ProgressBar
      android:id="@+id/signInProgressBar"
      android:visibility="gone"
      android:indeterminate="true"
      style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

    <TextView
      android:id="@+id/signInCreateNewAccountTextView"
      android:textSize="20sp"
      android:clickable="true"
      android:focusable="true"
      android:fontFamily="@font/patua"
      android:textColor="@color/colorBackgroundLight"
      android:layout_gravity="center"
      android:text="@string/sign_in_create_new_account"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="16dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  </LinearLayout>
</ScrollView>